testing/tests/ui/name_mismatch_endmacro.stderr
error: the previous template error derives from
 --> tests/ui/name_mismatch_endmacro.rs:4:21
  |
4 | #[template(source = "{% macro foo(arg) %} {{arg}} {% endmacro not_foo %}", ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
